fix user page post layout bug

--- a/src/components/Layouts/components/Header/Header.module.scss
+++ b/src/components/Layouts/components/Header/Header.module.scss
@@ -66,7 +66,7 @@ header {
         object-fit: cover;
     }
 
-    &:hover {
+    &:focus {
         padding: 2px;
         border: 2px solid var(--text-orange);
     }
